--- a/platzi/index.html
+++ b/platzi/index.html
@@ -11,35 +11,36 @@
 <body>
     <main>
         <section class="hero">
-            <figure class="badge"><img src="assets/badge.png" alt="badge"></figure>
-            <h1 class="title">
-                Curso de React.js
-            </h1>
-            <div class="description">
-                <p>
-                    React es una de las librerías más utilizadas hoy en día para
-                    crear aplicaciones web. En este curso podrás dominar la
-                    creación de aplicaciones a través de un proyecto que te
-                    ayudará a explotar todas las capacidades de esta librería.
-                </p>
-            </div>
-            <form action="#" class="form">
-                <p>Regístrate a Platzi</p>
-                <input type="text" placeholder="Nombre">
-                <input type="text" placeholder="Correo Electrónico">
-                <button type="submit">Comienza ahora</button>
-            </form>
-            <div class="countdown">
-                <p>Lanzamiento:</p>
-                <p>
-                    <span>01d</span>
-                    <span>:</span>
-                    <span>03h</span>
-                    <span>:</span>
-                    <span>09m</span>
-                    <span>:</span>
-                    <span>05s</span>
-                </p>
+            <div class="hero-container">
+                <figure class="badge">
+                    <img src="assets/badge.png" alt="badge">
+                </figure>
+                <h1 class="title">
+                    Curso de React.js
+                </h1>
+                <div class="description">
+                    <p>
+                        React es una de las librerías más utilizadas hoy en día para
+                        crear aplicaciones web. En este curso podrás dominar la
+                        creación de aplicaciones a través de un proyecto que te
+                        ayudará a explotar todas las capacidades de esta librería.
+                    </p>
+                </div>
+                <form action="#" class="form">
+                    <p>Regístrate a Platzi</p>
+                    <input type="text" placeholder="Nombre">
+                    <input type="text" placeholder="Correo Electrónico">
+                    <button type="submit">Comienza ahora</button>
+                </form>
+                <div class="countdown">
+                    <p>Lanzamiento:</p>
+                    <p>
+                        <span>01d</span>
+                        <span>03h</span>
+                        <span>09m</span>
+                        <span>05s</span>
+                    </p>
+                </div>
             </div>
         </section>
     </main>
